# stacking-game

./: .gitignore  IMPROVEMENTS.md  demo_game.py  demo_pylos.py  diffusion-llms-report.md  export_onnx.py  play_game.py  play_pylos.py  play_pylos_3d.py  pyproject.toml  sources.txt  visualise_game.py  visualise_pylos.py
.github/workflows/: deploy.yml
.kiro/settings/: lsp.json
pylos-web/: index.html  package-lock.json  package.json  vite.config.ts
pylos-web/public/: pylos.onnx
pylos-web/src/: ai.ts  game.ts  main.ts
pylos_env/: __init__.py  env.py  game.py
pylos_rl/: network.py  ppo.py  self_play_env.py  train.py
stacking-game/: index.html  package-lock.json  vite.config.ts
stacking-game/src/: ai.ts  game.ts  main.ts
stacking_env/: __init__.py  env.py  game.py
stacking_rl/: network.py  ppo.py  self_play_env.py  train.py
tests/: test_env.py  test_game.py
