[project]
name = "pylos-env"
version = "0.1.0"
description = "PettingZoo environment for the Pylos board game"
requires-python = ">=3.9"
dependencies = [
    "pettingzoo>=1.24.0",
    "gymnasium>=0.28.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
