[project]
name = "stacking-env"
version = "0.1.0"
description = "PettingZoo environment for a ball-stacking pyramid board game"
requires-python = ">=3.11"
dependencies = [
    "pettingzoo>=1.24.0",
    "gymnasium>=0.28.0",
    "numpy>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
rl = ["torch>=2.0", "tensorboard>=2.14"]

[tool.setuptools]
packages = ["stacking_env", "stacking_rl"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
